change login interface

--- a/login.html
+++ b/login.html
@@ -26,6 +26,24 @@
       padding-top: 40px;
       padding-bottom: 40px;
       background-color: #f5f5f5;
+      background-image: url("bcimgjap.png");
+    }
+
+    h5 span{
+      color: #4FF786;
+      text-shadow: 0 1px 0px black, 1px 0 0px black, 1px 2px 1px black, 2px 1px 1px black, 2px 3px 2px black, 3px 2px 2px black, 3px 4px 2px black, 4px 3px 3px black, 4px 5px 3px black, 5px 4px 2px black, 5px 6px 2px black, 6px 5px 2px black, 6px 7px 1px black, 7px 6px 1px black, 7px 8px 0px black, 8px 7px 0px black, 2px 2px 2px rgba(206,194,50,0);
+
+  
+    }
+    #user_id {
+  
+      border: 13px ridge #F7FF75;
+border-radius: 40px;   
+    }
+
+    #password { 
+      border: 13px ridge #F7FF75;
+border-radius: 40px;   
     }
 
     .signin {
@@ -34,17 +52,37 @@
       padding: 15px;
       margin: auto;
     }
+    #logbutton{
+      background:    #073763;
+background:    linear-gradient(#15b7d7, #073763 50%, #15b7d7);
+border-radius: 1000px;
+box-shadow:    9px -9px #999999;
+padding:       20px 45px;
+color:         #ffffff;
+display:       inline-block;
+font:          normal bold 26px/1 "Open Sans", sans-serif;
+text-align:    center;
+    }
+
   </style>
 </head>
-
 <body class="text-center">
   <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 1 (Fecha de entrega: 08/08/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
+      <h5 class="alert-heading"><span><b>¡Hola! Ingresa a tu cuenta para continuar:</b></span></h5>
+      <br>
+      <form>
+        <label></label>
+        <input type="text" id="user_id" name="user_id" value="" autocomplete="on" autocapitalize="none" spellcheck="false" autocorrect="off"  placeholder="E-mail o usurario" required autofocus>
+        <br>
+        <br>
+        <input type="password" id="password" name="password" value="" autocomplete="on" autocapitalize="none" spellcheck="false" autocorrect="off" placeholder="Contraseña" required autofocus>
+        <br>
+        <br>
+        <br>
+        <button type="submit" id="logbutton">Ingresar</button>
+    </form>
+      
+      <p class="mb-0"></p>
   </div>
 
   <script src="js/init.js"></script>
