Set required to index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ text-align:    center;
   <div class="container p-5">
       <h5 class="alert-heading"><span><b>¡Hola! Ingresa a tu cuenta para continuar:</b></span></h5>
       <br>
-     <form onsubmit="return false" action="/action_page.php">  <!-- onsumbit es para que no se refresque la pagina -->
+     <form onsubmit="return false">  <!-- onsumbit es para que no se refresque la pagina -->
         <label></label>
         <input type="text" id="user_id" name="user_id" value="" autocomplete="on" autocapitalize="none" spellcheck="false" autocorrect="off"  placeholder="E-mail o usurario" required autofocus />
         <br>
