--- a/products.html
+++ b/products.html
@@ -12,6 +12,7 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
@@ -29,7 +30,7 @@
           </div>
       </div>
   </div>
-    <div class="container p-5">
+    <!-- <div class="container p-5"> -->
       <!-- <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
         <h4 class="alert-heading">¡A trabajar! :)</h4>
         <p>Esta sección corresponde a: Entrega 1 (Fecha de entrega: 22/08/2021) y Entrega 2 (Fecha de entrega: 05/09/2021).</p>
@@ -50,6 +51,6 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
-    <script src="js/products.js"></script>
+    <script src="js/prueba.js"></script>
   </body>
 </html>
