--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     h5 span{
       color: #4FF786;
-      text-shadow: 0 1px 0px black, 1px 0 0px black, 1px 2px 1px black, 2px 1px 1px black, 2px 3px 2px black, 3px 2px 2px black, 3px 4px 2px black, 4px 3px 3px black, 4px 5px 3px black, 5px 4px 2px black, 5px 6px 2px black, 6px 5px 2px black, 6px 7px 1px black, 7px 6px 1px black, 7px 8px 0px black, 8px 7px 0px black, 2px 2px 2px rgba(206,194,50,0);
+      text-shadow: 2px 2px 2px black, 1px 0 0px black, 1px 2px 1px black, 2px 1px 1px black, 2px 3px 2px black, 3px 2px 2px black, 3px 4px 2px black, 4px 3px 3px black, 4px 5px 3px black, 5px 4px 2px black, 5px 6px 2px black, 6px 5px 2px black, 6px 7px 1px black, 7px 6px 1px black, 7px 8px 0px black, 8px 7px 0px black, 2px 2px 2px rgba(206,194,50,0);
 
   
     }
