--- a/products.html
+++ b/products.html
@@ -51,6 +51,6 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
-    <script src="js/prueba.js"></script>
+    <script src="js/products.js"></script>
   </body>
 </html>
