Added user name on nav bar

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@ text-align:    center;
       <br>
      <form onsubmit="return false">  <!-- onsumbit es para que no se refresque la pagina -->
         <label></label>
-        <input type="text" id="user_id" name="user_id" value="" autocomplete="on" autocapitalize="none" spellcheck="false" autocorrect="off"  placeholder="E-mail o usurario" required autofocus />
+        <input type="text" id="user_id" name="user_id" autocomplete="on" autocapitalize="none" spellcheck="false" autocorrect="off"  placeholder="E-mail o usurario" required autofocus />
         <br>
         <br>
-        <input type="password" id="password" name="password" value="" autocomplete="on" autocapitalize="none" spellcheck="false" autocorrect="off" placeholder="Contraseña" required autofocus />
+        <input type="password" id="password" name="password"  autocomplete="on" autocapitalize="none" spellcheck="false" autocorrect="off" placeholder="Contraseña" required autofocus />
         <br>
         <br>
         <br>
@@ -86,8 +86,6 @@ text-align:    center;
       
       <p class="mb-0"></p>
   </div>
-
-  <script src="js/init.js"></script>
   <script src="js/login.js"></script>
 </body>
 </html>
