--- a/index2.html
+++ b/index2.html
@@ -13,12 +13,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
   </head>
-  <body> <!--onload="myFunction()" esto dentro del body --> 
-    <!-- <script>
-      function myFunction(){
-          var myWindow = window.open("index2.html", "", "width=700,height=500");
-      }
-  </script> -->
+  <body> 
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
         <a class="py-2 d-none d-md-inline-block" href="index2.html">Inicio</a>
@@ -26,6 +21,10 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <p class="py-2 d-none d-md-inline-block" id="mostrar_user" style="color: pink"></p>
+      </div>
+      <div>
+        
       </div>
     </nav>
     <main role="main">
