--- a/products.html
+++ b/products.html
@@ -22,11 +22,25 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <p class="py-2 d-none d-md-inline-block" id="mostrar_user" style="color: pink"></p> <!-- Entrega 2 -->
       </div>
     </nav>
     <div class="container">
       <div class="row">
           <div class="list-group" id="cat-list-container">
+            <div class="col text-right">
+            <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+              <label class="btn btn-light active" id="sortAsc" >
+                  <input type="radio" name="options" autocomplete="off" checked>A-Z
+              </label>
+              <label class="btn btn-light" id="sortDesc" >
+                  <input type="radio" name="options" autocomplete="off">Z-A
+              </label>
+              <label class="btn btn-light" id="sortByCount" >
+                  <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Cant.
+              </label>
+          </div>
+        </div>
           </div>
       </div>
   </div>
@@ -52,5 +66,6 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
     <script src="js/products.js"></script>
+    
   </body>
 </html>
