--- a/sell.html
+++ b/sell.html
@@ -42,7 +42,7 @@
     </nav>
       <div class="container">
         <div class="text-center p-4">
-          <h2>Vender</h2>
+          <h2 style="color:salmon">Vender</h2>
           <p class="lead">Ingresa los datos del artículo a vender.</p>
         </div>
         <div class="row justify-content-md-center">
