--- a/products.html
+++ b/products.html
@@ -33,13 +33,13 @@
       <div class="row">
           <div class="col text-right">
               <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
-                  <label class="btn btn-light active" id="Asc" >
+                  <label class="btn btn-light active" id="ascendiente" >
                       <input type="radio" name="options" autocomplete="off" checked>Mayor Precio
                   </label>
-                  <label class="btn btn-light" id="Desc" >
+                  <label class="btn btn-light" id="descendiente" >
                       <input type="radio" name="options" autocomplete="off">Menor Precio
                   </label>
-                  <label class="btn btn-light" id="sortCant" >
+                  <label class="btn btn-light" id="cantidad" >
                       <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Cant.
                   </label>
               </div>
