added sort dec and sort relev

--- a/products.html
+++ b/products.html
@@ -33,10 +33,10 @@
       <div class="row">
           <div class="col text-right">
               <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
-                  <label class="btn btn-light active" id="ascendiente" >
+                  <label class="btn btn-light" id="descendiente" >
                       <input type="radio" name="options" autocomplete="off" checked>Mayor Precio
                   </label>
-                  <label class="btn btn-light" id="descendiente" >
+                  <label class="btn btn-light" id="ascendiente" >
                       <input type="radio" name="options" autocomplete="off">Menor Precio
                   </label>
                   <label class="btn btn-light" id="cantidad" >
