Added product info

--- a/product-info.html
+++ b/product-info.html
@@ -26,14 +26,74 @@
       <p class="py-2 d-none d-md-inline-block" id="mostrar_user" style="color: pink"></p> <!-- Entrega 2 -->
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
+  <div class="container mt-5">
+    <div class="text-center p-4">
+      <h2>Descripción del producto</h2>
+      <p class="lead">Aquí podrás ver los detalles del auto.</p>
+    </div>
+    <h3><b>Chevrolet Onix Joy</b></h3>
+    <hr class="my-3">
+    <dl>
+      <dt>Precio</dt>
+      <dd>
+        <p id="precio"></p>
+      </dd>
+      <dt>Vendidos</dt>
+      <dd>
+        <p id="vendidos"></p>
+      </dd>
+      <dt>Categoría</dt>
+      <dd>
+        <a href="category-info.html" id="categoria"></a>
+      </dd>
+      <dt>Descripción</dt>
+      <dd>
+        <p id="descripcion"></p>
+      </dd>
+
+      <dt>Imágenes ilustrativas</dt>
+      <dd>
+        <div class="row text-center text-lg-left pt-2" id="productImages">
+        </div>
+      </dd>
+    </dl>
+    <div id="comentarios">
+      <h3><b>Calificaciones</b><h3>
+    </div>
+    <br>
+    <br>
+    <div id="dejarcomentario">
+      <h5><b>Puedes dejar tu calificación aquí:</b></h5>
+      <br>
+      <form>
+        <textarea style="width: 500px; height: 150px; border-style:double; border-radius: 15px; border-width: 7px; background-color: lightcyan;" maxlength="150" placeholder="Escribe aquí..." ></textarea>
+        <br>
+        <br>
+        <select id="calif" name ="calif" style="border-width: 3px; background-color: lightcyan;">
+        <option value="" selected disabled hidden>Selecciona un puntaje</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        </select>
+        <br>
+        <br>
+        <button type="submit" value="send" style="background-color: rgb(52, 158, 245); box-shadow: 3px 4px 0px 0px #899599; border-radius:15px;
+        border:1px solid #d6bcd6; padding:7px 25px; cursor: cell;">Enviar</button>
+        <!-- <button type="submit" value="send" style="background-color: rgb(52, 245, 197);">Enviar</button> -->
+      </form>
+    </div>
+    <br>
+    <br>
+    <a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Volver</a>
+  </div>
+    <!-- <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
       <h4 class="alert-heading">¡A trabajar! :)</h4>
       <p>Esta sección corresponde a: Entrega 3 (Fecha de entrega: 19/09/2021) y Entrega 4 (Fecha de entrega: 03/10/2021).</p>
       <hr>
       <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
-  </div>
+    </div> -->
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
