--- a/products.html
+++ b/products.html
@@ -67,11 +67,10 @@
             </div>
           </div>
       </div>
-      <div class="row">
-          <div class="list-group" id="cat-list-container">
+      <div class="container mt-5">
+          <div class="container mt-5" id="cat-list-container" width=400>
           </div>
       </div>
-  </div>
     <!-- <div class="container p-5"> -->
       <!-- <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
         <h4 class="alert-heading">¡A trabajar! :)</h4>
