--- a/my-profile.html
+++ b/my-profile.html
@@ -29,6 +29,7 @@
     }
   </style>
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/dropzone.css" rel="stylesheet">
 </head>
@@ -40,8 +41,18 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      <p class="py-2 d-none d-md-inline-block" id="mostrar_user" style="color: pink"></p> <!-- Entrega 2 -->
+      <!-- <p class="py-2 d-none d-md-inline-block" id="mostrar_user" style="color: pink"></p> Entrega 2 -->
+      <div class="dropdown">
+        <a class="btn btn-secondary dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: pink">
+          <i class="fas fa-user-astronaut fa-xs fa-spin"></i> <span id="mostrar_user"></span>
+        </a>       
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="cart.html">Ver mi carrito</a>
+          <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="index.html" id="logOut">Cerrar sesión</a>
+        </div>
+      </div>
     </div>
   </nav>
   <div class="container p-5">
