--- a/product-info.html
+++ b/product-info.html
@@ -23,9 +23,8 @@
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <!-- <p class="py-2 d-none d-md-inline-block" id="mostrar_user" style="color: pink"></p> Entrega 2 -->
-      <div class="dropdown">  
-        
-        <a class="btn btn-secondary dropdown-toggle" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: pink">
+      <div class="dropdown">  <!-- Entrega 4 -->
+        <a class="btn btn-secondary dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: pink">
           <i class="fas fa-user-astronaut fa-xs fa-spin"></i> <span id="mostrar_user"></span>
         </a>             
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -33,6 +32,7 @@
           <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="index.html" id="logOut">Cerrar sesión</a>
+          <!-- Fin Entrega 4 -->
         </div>
       </div>
     </div>
