--- a/cart.html
+++ b/cart.html
@@ -68,7 +68,7 @@
   </nav>
   <div class="container">
     <div class="text-center p-4">
-      <h2 style="color:salmon">Carrito de Compras</h2>
+      <h2 style="color:salmon"><b>Carrito de Compras</b></h2>
     </div>
     <div class="row justify-content-md-center">
       <div class="col-md-8 order-md-1">
