--- a/sell.html
+++ b/sell.html
@@ -55,7 +55,7 @@
     </nav>
       <div class="container">
         <div class="text-center p-4">
-          <h2 style="color:salmon">Vender</h2>
+          <h2 style="color:salmon"><b>Vender</b></h2>
           <p class="lead">Ingresa los datos del artículo a vender.</p>
         </div>
         <div class="row justify-content-md-center">
