modified my profile function

--- a/my-profile.html
+++ b/my-profile.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
+  
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
@@ -26,6 +27,9 @@
       .bd-placeholder-img-lg {
         font-size: 3.5rem;
       }
+    }
+    .pstyle {
+      background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAFElEQVQImWNggIKysjIpHAwGBgYAWJsEdbVd/aEAAAAASUVORK5CYII=); background-repeat: repeat; background-color: #FFF;color: #222; border:outset; border-width: 1px; border-style: solid; border-color: #AAA; border-radius: 4px; box-shadow: 0 0 8px -3px #888; width: fit-content; padding: .8em;
     }
   </style>
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -130,5 +134,4 @@
   <script src="js/init.js"></script>
   <script src="js/my-profile.js"></script>
 </body>
-
 </html>
