--- a/my-profile.html
+++ b/my-profile.html
@@ -89,7 +89,7 @@
                 <input type="text" class="form-control" id="email" placeholder="" required>
                 <br>
                 <label for="phone">Teléfono de contacto <b>*</b></label>
-                <input type="text" class="form-control" id="phone" placeholder="" required>
+                <input type="tel" class="form-control" id="phone" placeholder="" required>
               </div>
             </div>
           <hr class="mb-4">
